import org.gradle.jvm.application.tasks.CreateStartScripts

plugins {
    java
    application
    id("org.openjfx.javafxplugin") version "0.1.0"
}

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

javafx {
    version = "21.0.6"
    modules = listOf("javafx.controls", "javafx.fxml")
}

application {
    mainModule.set("com.grabx.app.grabx")
    mainClass.set("com.grabx.app.grabx.Launcher")
}

dependencies {
    implementation("org.kordamp.ikonli:ikonli-javafx:12.3.1")
    implementation("org.kordamp.ikonli:ikonli-materialdesign2-pack:12.3.1")
    // Needed for iconLiteral like: fas-plus, far-..., fab-...
    implementation("org.kordamp.ikonli:ikonli-fontawesome5-pack:12.3.1")
    implementation("com.fasterxml.jackson.core:jackson-databind:2.17.0")
    testImplementation(platform("org.junit:junit-bom:5.11.4"))
    testImplementation("org.junit.jupiter:junit-jupiter")
}

tasks.test {
    useJUnitPlatform()
}


tasks.withType<JavaCompile>().configureEach {
    options.encoding = "UTF-8"
}

val nativeHostStartScripts by tasks.registering(CreateStartScripts::class) {
    mainClass.set("com.grabx.app.grabx.browser.BrowserNativeHostMain")
    applicationName = "grabx-native-host"
    outputDir = layout.buildDirectory.dir("native-host-start-scripts").get().asFile
    classpath = files(tasks.named("jar"), configurations.runtimeClasspath)
}

distributions {
    named("main") {
        contents {
            from("browser-extension") {
                into("browser-extension")
                exclude("tests/**", "**/__pycache__/**")
            }
            from("PLATFORMS.md")
            from(nativeHostStartScripts) {
                into("bin")
            }
        }
    }
}
